fix chrome overflow scroll

--- a/styles/template.css
+++ b/styles/template.css
@@ -26,7 +26,7 @@ body {
 
 #layout {
     height: calc(100% - 50px);
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 nav {
